--- a/src/app/pages/formulario/formulario.page.html
+++ b/src/app/pages/formulario/formulario.page.html
@@ -8,13 +8,32 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">formulario</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-item>
-    <ion-input label="Título" placeholder="Título"></ion-input>
-  </ion-item>
-  <ion-button>Default</ion-button>
+    <ion-item id="formulario">
+      <ion-icon name="search-sharp"></ion-icon>
+      <ion-input placeholder="Título" [(ngModel)]="titulo"></ion-input>
+      <ion-button (click)="buscarPelicula()">Buscar</ion-button>
+    </ion-item>
+    <ion-progress-bar type="indeterminate" *ngIf="cargando"></ion-progress-bar>
+
+    <ion-list [inset]="true" *ngIf="pelicula">
+      <ion-item>
+        <ion-icon aria-hidden="true" name="film" slot="start"></ion-icon>
+        <ion-label>{{pelicula?.Title}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon aria-hidden="true" name="calendar" slot="start"></ion-icon>
+        <ion-label>{{pelicula?.Year}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon aria-hidden="true" name="person-circle" slot="start"></ion-icon>
+        <ion-label>{{pelicula?.Director}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon aria-hidden="true" name="location" slot="start"></ion-icon>
+        <ion-label>{{pelicula?.Country}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-img *ngIf="pelicula" src="{{pelicula?.Poster}}" id="poster"></ion-img>
+      </ion-item>
+    </ion-list>
 </ion-content>
