--- a/src/app/pages/formulario/formulario.page.html
+++ b/src/app/pages/formulario/formulario.page.html
@@ -12,9 +12,12 @@
       <ion-icon name="search-sharp"></ion-icon>
       <ion-input placeholder="Título" [(ngModel)]="titulo"></ion-input>
       <ion-button (click)="buscarPelicula()">Buscar</ion-button>
+      <ion-button (click)="buscarPeliculaExistente()">Buscar Peli BBDD</ion-button>
     </ion-item>
     <ion-progress-bar type="indeterminate" *ngIf="cargando"></ion-progress-bar>
-
+    <ion-item *ngIf="pelicula">
+      <ion-button class="full-button" (click)="guardarPelicula()">Guardar</ion-button>
+    </ion-item>
     <ion-list [inset]="true" *ngIf="pelicula">
       <ion-item>
         <ion-icon aria-hidden="true" name="film" slot="start"></ion-icon>
@@ -34,9 +37,6 @@
       </ion-item>
       <ion-item>
         <ion-img *ngIf="pelicula" src="{{pelicula?.Poster}}" id="poster"></ion-img>
-      </ion-item>
-      <ion-item>
-        <ion-button class="full-button">Guardar</ion-button>
       </ion-item>
     </ion-list>
 </ion-content>
