--- a/src/app/pages/listado/listado.page.html
+++ b/src/app/pages/listado/listado.page.html
@@ -28,3 +28,9 @@
     </ion-item-options>
   </ion-item-sliding>
 </ion-content>
+<ion-alert
+  [isOpen]="confirmDeleteOpen"
+  header="¿Confirmas el borrado de la película?"
+  [buttons]="deleteButtons"
+  (didDismiss)="setResult($event)">
+</ion-alert>
