--- a/src/app/pages/formulario/formulario.page.html
+++ b/src/app/pages/formulario/formulario.page.html
@@ -38,7 +38,7 @@
         <ion-img *ngIf="pelicula" src="{{pelicula?.Poster}}" id="poster"></ion-img>
       </ion-item>
       <div class="rating">
-        <ion-icon size="large" name="heart-outline" *ngFor='let valoracion of [1,2,3,4,5]' (click)="valorar(valoracion)"></ion-icon>
+        <ion-icon size="large" name="heart" *ngFor='let valoracion of [1,2,3,4,5]' (click)="valorar(valoracion)"></ion-icon>
       </div>
     </ion-list>
 </ion-content>
