--- a/src/app/pages/listado/listado.page.html
+++ b/src/app/pages/listado/listado.page.html
@@ -14,14 +14,23 @@
     <ion-badge slot="end" color="danger">{{genero}}</ion-badge>
   </ion-item>
   <ion-item-sliding *ngFor="let pelicula of peliculas">
-    <ion-item>
+    <ion-item lines="none">
       <ion-icon name="film"></ion-icon>
       <ion-label>{{pelicula.Title}}</ion-label>
       <ion-icon name="chatbox"></ion-icon>
       <ion-label>{{pelicula.Genre}}</ion-label>
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>{{pelicula.Year}}</ion-label>
-      <ion-img [src]="pelicula.Poster" class="imagen"></ion-img>
+      <ion-label>
+        <ion-img [src]="pelicula.Poster" class="imagen"></ion-img>
+      </ion-label>
+    </ion-item>
+    <ion-item class="no-padding">
+      <ion-label slot="end">
+        <ion-icon name="heart" size="large" color="danger"></ion-icon>
+        <ion-icon name="heart" size="large" color="danger" *ngIf="pelicula.MyRating>=1"></ion-icon>
+        <ion-icon name="heart" size="large" color="danger" *ngIf="pelicula.MyRating>=2"></ion-icon>
+        <ion-icon name="heart" size="large" color="danger" *ngIf="pelicula.MyRating>=4"></ion-icon>
+        <ion-icon name="heart" size="large" color="danger" *ngIf="pelicula.MyRating>=3"></ion-icon>
+      </ion-label>
     </ion-item>
     <ion-item-options>
       <ion-item-option color="success" (click)="editar(pelicula.Title)">Editar</ion-item-option>
@@ -29,9 +38,6 @@
     </ion-item-options>
   </ion-item-sliding>
 </ion-content>
-<ion-alert
-  [isOpen]="confirmDeleteOpen"
-  header="¿Confirmas el borrado de la película?"
-  [buttons]="deleteButtons"
+<ion-alert [isOpen]="confirmDeleteOpen" header="¿Confirmas el borrado de la película?" [buttons]="deleteButtons"
   (didDismiss)="setResult($event)">
 </ion-alert>
