Inclusión de botón editar

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div>Desarrollado por San Blas Software Factory 2024</div>
+  <div class="flex-col">Desarrollado por Fernando Paniagua (2024)</div>
 </ion-content>
